# mcp-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  doc.go  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
cmd/client/: README.md  comprehensive_suite.go  list_tools.go  main.go
cmd/test_suite/: comprehensive_suite.go
docs/: CLIENT.md  COMMAND_ADVANCED_FEATURES.md  COMMAND_EXECUTION.md  COMMAND_PATH_VALIDATION.md  DOWNLOAD_TOOL.md  EXAMPLE.md  GETTING_STARTED.md  GET_STARTED.md  GITHUB_ACTIONS.md  INSTALLATION.md  INSTALLATION_GUIDE.md  INSTALLATION_SCRIPTS.md  LIST_TOOLS_GUIDE.md  MCP_CLIENT_TOOLS_LIST.md  PREREQUISITES.md  PUBLISH_GUIDE.md  QUICKSTART.md  QUICK_PUBLISH.md  RECOVERY.md  RELEASE.md  RELEASE_CHECKLIST.md  SETUP_COMPLETE.md  STREAMABLE_HTTP.md  TRANSPORT.md  VERSION_MANAGEMENT.md  compact_mode.md
examples/: command_execution_demo.md  recovery_demo.md  streamable_http_test.ps1  streamable_http_test.sh  test_compact_mode.ps1  test_compact_simple.bat  tools_list_compact.json  tools_list_normal.json
internal/services/filesystem/: command.go  command_advanced_test.go  command_async.go  command_history.go  command_permission.go  command_test.go  constants.go  doc.go  mcp_tools.go  mcp_tools_test.go  service.go  service_test.go  sysinfo.go  validation.go
internal/services/sandbox/: command.go  command_advanced_test.go  command_async.go  command_history.go  command_permission.go  command_permission_extended_test.go  command_test.go  constants.go  constants_test.go  doc.go  download.go  download_test.go  mcp_tools.go  mcp_tools_test.go  service.go  service_test.go  sysinfo.go  sysinfo_test.go  validation.go
pkg/client/: client.go  client_test.go  doc.go  pretouch.go  sse_client.go  stdio_client.go  types.go
pkg/transport/: doc.go  http.go  http_streamable_test.go  http_test.go  ratelimiter.go  ratelimiter_test.go  sse.go  sse_test.go  tool_registry.go  tool_registry_recovery_test.go
pkg/types/: command.go  common.go  config.go  constants.go  constants_test.go  doc.go  file.go  filesystem.go  mcp.go  schema.go  schema_simplify_test.go  sysinfo.go  time.go
pkg/utils/: doc.go
pkg/utils/json/: json.go  json_benchmark_test.go  json_gojson.go  json_jsoniter.go  json_sonic.go  json_std.go  json_test.go  pretouch.go
pkg/utils/recovery/: recovery.go  recovery_test.go
python/mcp_toolkit_wrapper/: __init__.py  installer.py
scripts/: build.bat  build.sh  build_wheels.py  install.ps1  install.sh  list_tools.bat  list_tools.sh  test_comprehensive.bat  test_comprehensive.sh  verify_fix.bat  verify_fix_simple.bat
