# pyproject.toml - Python 包装配置，用于通过 uv/pipx 安装
# Python wrapper configuration for installation via uv/pipx

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sandbox-toolkit"
version = "0.0.0"  # This will be automatically updated by GitHub Actions during release
description = "A cross-platform sandboxed file system operations toolkit based on Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "MCP Toolkit Authors", email = "shibingli@yeah.net"},
]
keywords = ["mcp", "model-context-protocol", "file-system", "toolkit", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://github.com/shibingli/mcp-toolkit"
Documentation = "https://github.com/shibingli/mcp-toolkit/blob/main/README.md"
Repository = "https://github.com/shibingli/mcp-toolkit"
Issues = "https://github.com/shibingli/mcp-toolkit/issues"
Changelog = "https://github.com/shibingli/mcp-toolkit/releases"

[project.scripts]
mcp-sandbox-toolkit = "mcp_toolkit_wrapper:main"
mcp-toolkit = "mcp_toolkit_wrapper:main"
mcp-toolkit-uninstall = "mcp_toolkit_wrapper:uninstall_main"

# Wheel 构建配置
[tool.hatch.build.targets.wheel]
packages = ["python/mcp_toolkit_wrapper"]
# 只包含二进制文件，不包含 .gitkeep
# Only include binary files, not .gitkeep
artifacts = [
    "python/mcp_toolkit_wrapper/bin/mcp-toolkit",
    "python/mcp_toolkit_wrapper/bin/mcp-toolkit.exe",
]
# 排除 .gitkeep 文件
exclude = [
    "**/.gitkeep",
    "**/bin/.gitkeep",
]

[dependency-groups]
dev = []

